Bug 1568753 - Make `TextEditor::SetUnmaskRangeInternal()` return NS_OK if there is no text node and `aStart` is `UINT32_MAX` r=m_kato

`aStart` of `TextEditor::SetUnmaskRangeInternal()` may be `UINT32_MAX` if
it's called for stopping unmasking.  However, it returns `NS_ERROR_INVALID_ARG`
if there is no text node and `aStart` is not 0, but this is unexpected behavior.

Differential Revision: https://phabricator.services.mozilla.com/D39326

--HG--
extra : moz-landing-system : lando